FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20171012:
AUTHOR: mat@FreeBSD.org

  Remove WANT_GNOME and HAVE_GNOME, they were in disuse, and made useless by
  options.

20171011:
AUTHOR: bapt@FreeBSD.org

  New BINARY_ALIAS variable has been added, when defined it will create symlinks
  of some given binaries in a directory which will be prepended to the PATH.

  The syntax is the following:
  BINARY_ALIAS=   target1=source1  target2=source2

  For example to have a "swig" binary in the path which will be pointing at
  swig3.0 and a "sed" pointing at GNU sed: gsed

  BINARY_ALIAS=  swig=swig3.0 sed=gsed

20170625:
AUTHOR: kde@FreeBSD.org

  The default generator for USES=cmake ports has been switched to ninja.

  Previously it was possible to opt-in to using ninja instead of make(1)
  by setting CMAKE_NINJA, now ports need to opt-out.

  Ports that do not build with ninja must switch from
      USES=cmake:<args>
  to
      USES=cmake:<args>,noninja


20170417:
AUTHOR:	kwm@FreeBSD.org

  New USES: meson, to handle properly the meson building system.

20170313:
AUTHOR: tijl@FreeBSD.org

  HTTPS certificates are now verified when "make makesum" fetches distfiles.
  If this fails make sure you have a CA certificate bundle installed such as
  security/ca_root_nss.  If it still fails and there are other HTTPS sites
  with a valid certificate consider removing the site from MASTER_SITES.
  If the site cannot be removed you can disable certificate verification by
  adding the following line to the port Makefile:

  FETCH_ENV=	SSL_NO_VERIFY_PEER=1 SSL_NO_VERIFY_HOSTNAME=1

20170218:
AUTHOR: kde@FreeBSD.org

  * Qt 4's binaries have been moved to lib/qt4/bin to match what is already done